--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,19 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/better_exposed_filters": "^3.0@alpha",
+        "drupal/captcha": "^1.0@beta",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5",
+        "drupal/ctools": "^3.0",
+        "drupal/entityqueue": "^1.0@alpha",
+        "drupal/inline_entity_form": "^1.0@beta",
+        "drupal/metatag": "^1.5",
+        "drupal/page_manager": "^4.0@beta",
+        "drupal/panels": "^4.3",
+        "drupal/pathauto": "^1.1",
+        "drupal/recaptcha": "^2.3",
+        "drupal/smtp": "^1.0@beta",
+        "drupal/token": "^1.1",
         "drush/drush": "^9.0.0",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3"
