--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,5 +1,6 @@
 module:
   automated_cron: 0
+  better_exposed_filters: 0
   big_pipe: 0
   block: 0
   block_content: 0
@@ -12,6 +13,8 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  devel: 0
+  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
