--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_category
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - image.style.medium
@@ -23,34 +24,30 @@ mode: teaser
 content:
   body:
     type: text_summary_or_trimmed
-    weight: 0
+    weight: 1
     region: content
     settings:
-      trim_length: 600
+      trim_length: 150
     third_party_settings: {  }
     label: hidden
+  field_category:
+    type: entity_reference_label
+    weight: 2
+    region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
   field_image:
     type: image
-    weight: -1
+    weight: 0
     region: content
     settings:
       image_style: medium
       image_link: content
     third_party_settings: {  }
     label: hidden
-  field_tags:
-    type: entity_reference_label
-    weight: 10
-    region: content
-    settings:
-      link: true
-    third_party_settings: {  }
-    label: above
-  links:
-    weight: 100
-    region: content
 hidden:
   comment: true
-  field_category: true
-  field_image: true
   field_tags: true
+  links: true
