--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.event.body
     - field.field.node.event.field_date
+    - field.field.node.event.field_email
     - field.field.node.event.field_image
     - node.type.event
   module:
@@ -25,7 +26,7 @@ content:
     third_party_settings: {  }
     region: content
   field_date:
-    weight: 0
+    weight: 1
     label: inline
     settings:
       format_type: medium
@@ -33,8 +34,15 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
+  field_email:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   field_image:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       image_style: ''
