--- a/web/modules/custom/drupal_itm_demos/drupal_itm_demos.info.yml
+++ b/web/modules/custom/drupal_itm_demos/drupal_itm_demos.info.yml
@@ -1,5 +1,5 @@
 name: 'Drupal ITM Demos'
 type: module
-description: 'some demos for drupal itm'
+description: 'Some demos for Drupal ITM'
 core: 8.x
 package: 'Custom'
