--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.article.field_category
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
+    - field.field.node.article.field_ts
     - image.style.thumbnail
     - node.type.article
   module:
@@ -69,6 +70,12 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_ts:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_timestamp
+    region: content
   path:
     type: path
     weight: 10
