--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.article.field_category
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
+    - field.field.node.article.field_ts
     - image.style.large
     - node.type.article
   module:
@@ -64,6 +65,16 @@ content:
     settings:
       link: true
     third_party_settings: {  }
+  field_ts:
+    weight: 6
+    label: above
+    settings:
+      date_format: medium
+      custom_date_format: ''
+      timezone: ''
+    third_party_settings: {  }
+    type: timestamp
+    region: content
   links:
     weight: 4
     region: content
