--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -31,6 +31,7 @@ module:
   history: 0
   image: 0
   inline_entity_form: 0
+  itm_lab3: 0
   kint: 0
   layout_discovery: 0
   link: 0
@@ -71,6 +72,8 @@ theme:
   seven: 0
   adminimal_theme: 0
   demo_theme: 0
+  bootstrap_barrio: 0
+  drupalitm: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
